<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HorarioFixActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <TimePicker
            android:id="@+id/id_clock_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/days_of_week_text_view"
            style="@style/CadastroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/days_of_week_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_clock_schedule" />

        <LinearLayout
            android:id="@+id/days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/days_of_week_text_view">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_horizontal">

                <ToggleButton
                    android:id="@+id/sunday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday" />

                <ToggleButton
                    android:id="@+id/monday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday" />

                <ToggleButton
                    android:id="@+id/tuesday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday" />

                <ToggleButton
                    android:id="@+id/wednesday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday" />

                <ToggleButton
                    android:id="@+id/thursday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday" />

                <ToggleButton
                    android:id="@+id/friday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday" />

                <ToggleButton
                    android:id="@+id/saturday_day"
                    style="@style/Days"
                    android:background="@drawable/toggle_button_background"
                    android:stateListAnimator="@null"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/back_button_register_medicine"
            style="@style/MainButton"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button_login_register"
            android:stateListAnimator="@null"
            android:text="@string/button_back_clock_interval"
            app:layout_constraintEnd_toStartOf="@id/next_button_register_medicine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/days_of_week" />

        <Button
            android:id="@+id/next_button_register_medicine"
            style="@style/MainButton"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button_login_register"
            android:stateListAnimator="@null"
            android:text="@string/next_register_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button_register_medicine"
            app:layout_constraintTop_toBottomOf="@id/days_of_week" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>