<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/pill_image"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:src="@mipmap/pill_helper_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_welcome"
            style="@style/GeralText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/text_welcome_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pill_image" />

        <Button
            android:id="@+id/login_button"
            style="@style/Button_login_sign_in"
            android:layout_marginTop="300dp"
            android:background="@drawable/custom_button_login_register"
            android:stateListAnimator="@null"
            android:text="@string/login_enter_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pill_image" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Button_login_sign_in"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_login_register"
            android:stateListAnimator="@null"
            android:text="@string/login_sign_in_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>